--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     display: flex;
     justify-content: center;
     background-image: linear-gradient(rgb(0,0,0), rgb(255, 255, 255));
@@ -84,4 +84,199 @@ i{
 }
 i:hover{
     color:rgb(22, 158, 22);
+} */
+
+body {
+    font-family: Ubuntu, Arial, Helvetica, sans-serif;
+    background-color: rgb(236, 235, 235);
+}
+
+.items {
+    background-color: black;
+    height: 80px;
+    display: flex;
+    width: 99%;
+    position: absolute;
+    top: 0.2px;
+}
+
+.items a {
+    color: white;
+    text-decoration: none;
+}
+
+.user-section {
+    color: white;
+    height: 290px;
+    background-color: rgb(58, 56, 56);
+    text-align: center;
+    padding: 4%;
+}
+
+.user-generator {
+    font-size: 35px;
+}
+
+.user-email {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+    margin-top: 1.3%;
+    color: rgb(199, 194, 194);
+}
+
+.opensource {
+    font-size: 18px;
+}
+
+.link {
+    color: rgb(106, 106, 179);
+}
+
+.home {
+    margin-top: 3%;
+    margin-left: 19%;
+}
+
+.home-image {
+    position: absolute;
+    margin-left: 19%;
+    background: transparent;
+}
+
+.user-image {
+    position: absolute;
+    margin-left: 26%;
+}
+
+.user {
+    margin-top: 3%;
+    padding-left: 2.6%;
+}
+
+.document-image {
+    position: absolute;
+    margin-left: 35%;
+    margin-top: 0.2%;
+}
+
+.documentation {
+    padding-left: 2.6%;
+    margin-top: 3%;
+}
+
+.changelog-image {
+    position: absolute;
+    margin-left: 44%;
+}
+
+.change-log {
+    padding-left: 2.5%;
+    margin-top: 3%;
+}
+
+.graph-image {
+    position: absolute;
+    margin-left: 53%;
+}
+
+.graph {
+    padding-left: 2.6%;
+    margin-top: 3%;
+}
+
+.heart-image {
+    position: absolute;
+    margin-left: 60.5%;
+    margin-top: 0.4%;
+}
+
+.donate {
+    margin-top: 3%;
+    padding-left: 2.3%;
+}
+
+.copy-image {
+    position: absolute;
+    margin-left: 69%;
+    margin-top: 0.3%;
+}
+
+.copy {
+    margin-top: 3%;
+    padding-left: 2.6%;
+}
+
+.ps-image {
+    position: absolute;
+    margin-left: 80%;
+    margin-top: 0.5%;
+}
+
+.photo {
+    margin-top: 3%;
+    padding-left: 2.6%;
+}
+
+.twit-image {
+    position: absolute;
+    right: 54.7%;
+}
+
+#user-container {
+    background-color: white;
+    height: 400px;
+    box-shadow: 0 0px 1px rgb(208, 207, 207);
+    width: 750px;
+    margin-bottom: 23%;
+    margin-left: 23%;
+    text-align: center;
+}
+
+.container-one {
+    padding: 23px;
+    height: 200px;
+    width:710px;
+    background-color: rgb(251, 248, 248);
+    box-shadow: 0 0px 15px rgb(196, 196, 196);
+    text-align: center;
+    margin: 18% 25%;
+    color: rgb(17, 17, 17);
+}
+
+.randomApi {
+    font-size: 23px;
+}
+
+.text-change {
+    color: rgb(95, 94, 94);
+}
+
+span {
+    color: rgb(100, 97, 97);
+    font-weight: 800;
+}
+
+.learn-more {
+    background-color: rgb(110, 179, 7);
+    width: 15%;
+    border: none;
+    color: white;
+    padding: 10px;
+}
+hr{
+    padding-top: 80px;
+}
+#userImg {
+    border-radius: 50%;
+    margin-top: -50px;
+}
+
+#icon-container {
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+    margin-top: -29%;
+}
+#user-container{
+    color:black;
 }
